--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -45,7 +45,6 @@
      border-radius: 8px;
      color: var(--darkest-blue-color);
      margin: 8px;
-     font-size: 16px;
 }
 
 .register-button:hover {
